[project]
name = "statistics-study"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "red_rea"}
]
dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "scikit-learn>=1.4.2",
    "japanize_matplotlib>=1.1.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/statistics_study", "src/missing_data"]
